# resolved_acc_controller

./: CMakeLists.txt
include/: kinematics.hpp  model.hpp  robot.hpp  simulator.hpp
src/: CMakeLists.txt  main.cpp
src/controller/kinematics/: CMakeLists.txt  calc_dth.cpp  calc_jacobian.cpp  calc_position_ee.cpp  kinematics.cpp  polynomialInterpolation.cpp  read_kinematics.cpp
src/model/: CMakeLists.txt  read_model.cpp
src/simulator/: CMakeLists.txt  forward_kinematics.cpp  init.cpp  inverse_kinematics.cpp  output.cpp  polynomialInterpolation.cpp  runge_kutta.cpp  set_command.cpp  set_desire.cpp
